# geometry

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  pyproject.toml
.github/workflows/: application-tests.yaml  tests.yaml
geometry/: __init__.py  line.py  point.py
src/geometry/: line.py
tests/: test__line.py  test__point.py
