[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "geometry"
version = "0.0.0"
description = "Simple geometry library for Python."
readme = "README.md"
authors = ["Bilbottom"]
repository = "https://github.com/Bilbottom/geometry"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group]
dev.optional = false
test.optional = false
ide.optional = false

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.3.3"
pylint = "^2.17.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

# Packages just for IDE integration
[tool.poetry.group.ide.dependencies]
black = "*"


[tool.pytest.ini_options]
addopts = "--cov=geometry --cov-report term-missing --cov-fail-under=100"
testpaths = [
    "tests",
]


[tool.isort]
profile = "black"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
ignore-paths = "^tests/.*$"
disable = ["no-else-return", "no-else-raise"]
